Load networks asynchronously
After loading the network page do a POST to get the networks.
Allows showing a waiting indicator and error messages in case something goes wrong getting the active networks

--- a/Python/templates/status.html
+++ b/Python/templates/status.html
@@ -18,6 +18,8 @@
 			<!-- Show Oradio logo -->
 			<img src="../static/logo.png" class="logo" />
 
+			<h1 >Oradio informatie</h1>
+
 			<table>
 				<tr>
 					<th>Parameter</th>
