Fix typo in notification string

--- a/Python/templates/network.html
+++ b/Python/templates/network.html
@@ -183,7 +183,7 @@
 					// Handle server response
 					if (response.ok)
 					{
-						notification_network.innerHTML = `<p>De huidige verbinding wordt verbroken.</p><p>Oradio probeert te verbinden met '${ssid}'</p>`;
+						notification_network.innerHTML = `<p>De huidige verbinding wordt verbroken</p><p>Oradio probeert te verbinden met '${ssid}'</p>`;
 					}
 					else
 					{
