Stop keyboard popup when clicking on network

--- a/Python/templates/network.html
+++ b/Python/templates/network.html
@@ -363,7 +363,7 @@
 				<!-- Password -->
 				<div id="password" style="display: none">
 					<label for="pswd">Wachtwoord:</label>
-					<input id="pswd" class="pswd-input" type="password" placeholder="Voer WiFi-wachtwoord in" />
+					<input id="pswd" class="pswd-input" type="password" readonly placeholder="Voer WiFi-wachtwoord in" />
 					<span class="password-toggle-icon oradio-eye"><i class="fa-regular fa-eye"></i></span>
 				</div>
 				<button id="submitCredentialsButton" type="submit" style="display: none">Met netwerk verbinden</button>
