--- a/Python/templates/network.html
+++ b/Python/templates/network.html
@@ -352,7 +352,7 @@
 				<h1 >Verbind Oradio met WiFi-netwerk</h1>
 				<label for="SSIDs">Netwerk:</label>
 				<div id="network" class="custom-select">
-					<input type="text" id="SSIDs" name="SSIDs" placeholder="-- Selecteer of typ uw WiFi-netwerk --" />
+					<input type="text" id="SSIDs" name="SSIDs" readonly placeholder="-- Selecteer of typ uw WiFi-netwerk --" />
 					<span class="custom-icon">&#x25BC;</span> <!-- ▼ icon -->
 					<div id="options" class="options"></div>
 				</div>
@@ -363,7 +363,7 @@
 				<!-- Password -->
 				<div id="password" style="display: none">
 					<label for="pswd">Wachtwoord:</label>
-					<input id="pswd" class="pswd-input" type="password" readonly placeholder="Voer WiFi-wachtwoord in" />
+					<input id="pswd" class="pswd-input" type="password" placeholder="Voer WiFi-wachtwoord in" />
 					<span class="password-toggle-icon oradio-eye"><i class="fa-regular fa-eye"></i></span>
 				</div>
 				<button id="submitCredentialsButton" type="submit" style="display: none">Met netwerk verbinden</button>
