Update to show relevant info
- Remove network info: not relevant, is OradioAP by default
- Add hardware and software info: relevant for traceability

--- a/Python/templates/status.html
+++ b/Python/templates/status.html
@@ -30,8 +30,20 @@
 					<td>{{ serial }}</td>
 				</tr>
 				<tr>
-					<td>Wifi netwerk SSID</td>
-					<td>{{ network }}</td>
+					<td>Hardware serienummer</td>
+					<td>{{ hw_serial }}</td>
+				</tr>
+				<tr>
+					<td>Hardware versie</td>
+					<td>{{ hw_version }}</td>
+				</tr>
+				<tr>
+					<td>Software serienummer</td>
+					<td>{{ sw_serial }}</td>
+				</tr>
+				<tr>
+					<td>Software versie</td>
+					<td>{{ sw_version }}</td>
 				</tr>
 			</table>
 
