Improve status page layout

--- a/Python/templates/status.html
+++ b/Python/templates/status.html
@@ -22,28 +22,28 @@
 
 			<table>
 				<tr>
-					<th>Parameter</th>
-					<th>Waarde</th>
+					<th class="col1">Parameter</th>
+					<th class="col2">Waarde</th>
 				</tr>
 				<tr>
-					<td>Oradio serienummer</td>
-					<td>{{ serial }}</td>
+					<td class="col1">Oradio serienummer</td>
+					<td class="col2">{{ serial }}</td>
 				</tr>
 				<tr>
-					<td>Hardware serienummer</td>
-					<td>{{ hw_serial }}</td>
+					<td class="col1">Hardware versie</td>
+					<td class="col2">{{ hw_version }}</td>
 				</tr>
 				<tr>
-					<td>Hardware versie</td>
-					<td>{{ hw_version }}</td>
+					<td class="col1">Hardware serienummer</td>
+					<td class="col2">{{ hw_serial }}</td>
 				</tr>
 				<tr>
-					<td>Software serienummer</td>
-					<td>{{ sw_serial }}</td>
+					<td class="col1">Software versie</td>
+					<td class="col2">{{ sw_version }}</td>
 				</tr>
 				<tr>
-					<td>Software versie</td>
-					<td>{{ sw_version }}</td>
+					<td class="col1">Software serienummer</td>
+					<td class="col2">{{ sw_serial }}</td>
 				</tr>
 			</table>
 
