--- a/Python/static/css/status.css
+++ b/Python/static/css/status.css
@@ -21,9 +21,18 @@ table, th, td {
 
 th, td {
 	text-align: left;
-	padding: 5px;
+	padding: 8px;
 	width: 300px;
 	
+}
+
+.col1 {
+  width: 1px; /* laat inhoud de breedte bepalen */
+  white-space: nowrap;
+}
+
+.col2 {
+  width: 100%; /* neemt de rest van de ruimte in */
 }
 
 html {
