--- a/Python/templates/network.html
+++ b/Python/templates/network.html
@@ -14,352 +14,21 @@
 		<link rel="stylesheet" href="../static/css/oradio3.css" />
 		<link rel="stylesheet" href="../static/css/network.css" />
 
+		<script src="../static/js/network.js"></script>
+
 		<title>Oradio wifi instellen</title>
 
 		<script>
-			// Initialize
-			let networks = [];
-			let notification_oldssid;
-			let notification_network;
-			let notification_spotify;
-
 			// Convert template variable to javascript
 			const oldssid = {{ oldssid|tojson }};
 			const spotify = {{ spotify|tojson }};
-
-			// Function to get the active wifi networks
-			async function getNetworks()
-			{
-				// Scanning the networks may take a few seconds, so show the waiting indicator
-				show_waiting();
-
-				// Set error template
-				const errorMessage = `Ophalen van de active wifi netwerken is mislukt`;
-
-				try
-				{
-					// Fetch playlist songs
-					const response = await fetch('/get_networks',
-					{
-						method: 'POST',
-						headers: {'Content-Type': 'application/json'}
-					});
-
-					// Handle server response
-					if (response.ok)
-					{
-						// Wait for networks to be returned from server
-						const networks = await response.json();
-
-						// Notify if no songs
-						if (!Array.isArray(networks) || networks.length === 0)
-						{
-							// Notify no networks found
-							notification_network.innerHTML = `<span class='warning'>Geen active netwerken gevonden</span>`;
-						}
-						else
-						{
-							// Clear and hide notification_network
-							notification_network.innerHTML = "";
-
-							// Get network input and options as dropdown
-							const input = document.getElementById('SSIDs');
-							const dropdown = document.getElementById('options');
-
-							let options = networks.map(network => network.ssid);
-							options.sort((a, b) => a.toLowerCase().localeCompare(b.toLowerCase()));
-
-							dropdown.innerHTML = '';
-							options.forEach(option =>
-							{
-								const div = document.createElement('div');
-								div.textContent = option;
-
-								// Add click event handler
-								div.addEventListener('click', (event) =>
-								{
-									// Ignore if nothing changed
-									if (input.value !== option)
-									{
-										// Update input with option
-										input.value = option;
-
-										// Hide dropdown with options
-										dropdown.style.display = 'none';
-
-										// Clear password
-										document.getElementById("pswd").value = "";
-
-										// Delay to allow click on option to be processed
-										setTimeout(() =>
-										{
-											// If a network is entered
-											if (input.value.trim() !== "")
-											{
-												// Check if network needs a password
-												const network = networks.find(n => n.ssid === input.value.trim());
-												if (network)
-													if (network.type === "closed")
-														// Network needs a password
-														document.getElementById("password").style.display = "block"
-													else
-														// Open network, no password needed
-														document.getElementById("password").style.display = "none"
-												else
-													// Unknown network, assume password is needed
-													document.getElementById("password").style.display = "block"
-
-												// Show submit credentials button
-												document.getElementById("submitCredentialsButton").style.display = "block"
-											}
-										}, 300);
-									}
-								});
-
-								// Add option to list
-								dropdown.appendChild(div);
-							});
-						}
-					}
-					else
-					{
-						// Wait for error to be returned from server
-						const errorData = await response.json();
-
-						// Notify
-						notification_network.innerHTML = `<p class='error'>${errorData.message || errorMessage}</p>`;
-					}
-				}
-
-				// Handle server not responding
-				catch (error)
-				{
-					notification_network.innerHTML = `<p class='error'>${errorMessage}<br>Controleer of de web interface actief is</p>`;
-				}
-
-				// Success or fail, hide waiting indicator
-				hide_waiting();
-			}
-
-			// Function to submit the network and password
-			async function submitCredentials(event)
-			{
-				// Cancel the default action that belongs to the event
-				event.preventDefault();
-
-				// Clear old network notification
-				notification_network.innerHTML = "";
-
-				// Get selected network info
-				const ssid = document.getElementById("SSIDs").value;
-				if (ssid == "")
-				{
-					notification_network.innerHTML = `<div class="error">Kies een wifi netwerk</div>`;
-					return;
-				}
-
-				// Get password element
-				const pswd = document.getElementById("pswd").value;
-
-				// Check password is ok
-				const ignorePswd = (document.getElementById("password").style.display === "none");
-				if (!ignorePswd && pswd.length < 8)
-				{
-					notification_network.innerHTML = `<p class="error">Wachtwoord moet minimaal 8 karakters zijn</p>`;
-					return;
-				}
-
-				// Set error template
-				const errorMessage = `Verbinding maken met netwerk '${ssid}' is mislukt`;
-
-				try
-				{
-					// Show waiting indicator as it will take a few seconds before the connection is lost
-					show_waiting();
-
-					// Send credentials to server
-					const response = await fetch('/wifi_connect',
-					{
-						method: 'POST',
-						headers: {'Content-Type': 'application/json'},
-						body: JSON.stringify({"ssid": ssid, "pswd": pswd})
-					});
-
-					// Handle server response
-					if (response.ok)
-					{
-						notification_network.innerHTML = `<p>De huidige verbinding wordt verbroken</p><p>Oradio probeert te verbinden met '${ssid}'</p>`;
-					}
-					else
-					{
-						// Wait for error to be returned from server
-						const errorData = await response.json();
-
-						// Notify
-						notification_network.innerHTML = `<p class="error">${errorData.message || errorMessage}</p>`;
-
-						// Error found: Hide the waiting indicator
-						hide_waiting();
-					}
-				}
-
-				// Handle server not responding
-				catch (error)
-				{
-					notification_network.innerHTML = `<p class="error">${errorMessage}<br>Controleer of de web interface actief is</p>`;
-
-					// Error found: Hide the waiting indicator
-					hide_waiting();
-				}
-			}
-
-			// Function to submit the Spotify name
-			async function submitSpotify(event)
-			{
-				// Cancel the default action that belongs to the event
-				event.preventDefault();
-
-				// Clear old notifications
-				notification_spotify.innerHTML = "";
-
-				// Get selected network info
-				var name = document.getElementById("spotify").value;
-				if (name == "")
-				{
-					notification_spotify.innerHTML = "<div class='error'>Kies een naam voor in de Spotifiy app</div>";
-					return;
-				}
-
-				// Show waiting indicator
-				document.getElementById('waiting').style.display = "block";
-
-				// Set error template
-				const errorMessage = `Instellen van Spotify naam '${name}' is mislukt`;
-
-				try
-				{
-					// Send credentials to server
-					const response = await fetch('/spotify',
-					{
-						method: 'POST',
-						headers: {'Content-Type': 'application/json'},
-						body: JSON.stringify({ "name": name })
-					});
-
-					// Handle server response
-					if (response.ok)
-					{
-						name = await response.json();
-						document.getElementById("spotify").value = name;
-						notification_spotify.innerHTML = `<p>De Spotify naam is gewijzigd in '${name}'</p>`;
-					}
-					else
-					{
-						// Wait for error to be returned from server
-						const errorData = await response.json();
-
-						// Notify
-						notification_spotify.innerHTML = `<p class='error'>${errorData.message || errorMessage}</p>`;
-					}
-				}
-
-				// Handle server not responding
-				catch (error)
-				{
-					notification_spotify.innerHTML = `<p class='error'>${errorMessage}<br>Controleer of de web interface actief is</p>`;
-				}
-
-				// Hide waiting indicator
-				document.getElementById('waiting').style.display = "none";
-			}
-
-			// Run when page is loaded
-			window.onload = () =>
-			{
-				// Remove focus
-				setTimeout(() =>
-				{
-					document.querySelectorAll('input').forEach(input =>
-					{
-						input.style.pointerEvents = 'auto';
-					});
-				}, 0);
-
-				// Get network input and options as dropdown
-				const input = document.getElementById('SSIDs');
-				const dropdown = document.getElementById('options');
-
-				// Fetch active networks from server
-				getNetworks();
-
-				// Get notifications
-				notification_oldssid = document.getElementById('notification_oldssid');
-				notification_network = document.getElementById('notification_network');
-				notification_spotify = document.getElementById('notification_spotify');
-
-				// Clear old notifications
-				notification_oldssid.innerHTML = "";
-				notification_network.innerHTML = "";
-				notification_spotify.innerHTML = "";
-
-				// Notify which network the Oradio was connected to before starting the web interface
-				if (oldssid?.length)		// ?. operatormeans test if variable exists  AND length > 0
-					notification_oldssid.innerHTML = `<p>Oradio was verbonden met '${oldssid}'</p>`;
-				else
-					notification_oldssid.innerHTML = `<p>Oradio was niet verbonden met een WiFi-netwerk</p>`;
-
-				// Show notifications
-				notification_oldssid.style.display = "block";
-				notification_network.style.display = "block";
-				notification_spotify.style.display = "block";
-
-				// Show options when input is clicked
-				input.addEventListener("click", (event) =>
-				{
-					// Prevent click from propagating to document
-					event.stopPropagation();
-
-					// Show networks dropdown
-					dropdown.style.display = 'block';
-				});
-
-				// Hide options when clicking outside the network area
-				document.addEventListener("click", function (event)
-				{
-					if (!dropdown.contains(event.target) && dropdown.style.display == "block")
-						dropdown.style.display = "none";
-				});
-
-				// Clear spotify notification when selecting input
-				document.getElementById("spotify").addEventListener("focus", function()
-				{
-					notification_spotify.innerHTML = "";
-				});
-
-				// Toggle password visibility
-				const password = document.getElementById("pswd");
-				const togglePassword = document.querySelector(".password-toggle-icon i");
-				togglePassword.addEventListener("click", function ()
-				{
-
-					if (password.type === "password")
-					{
-						password.type = "text";
-						togglePassword.classList.remove("fa-eye");
-						togglePassword.classList.add("fa-eye-slash");
-					}
-					else
-					{
-						password.type = "password";
-						togglePassword.classList.remove("fa-eye-slash");
-						togglePassword.classList.add("fa-eye");
-					}
-				});
-			}
 		</script>
 	</head>
 	<body>
+
+		<!-- Include menu buttons -->
 		{% include "menu.html" %}
+
 		<div class="container">
 
 			<!-- Show Oradio logo -->
