--- a/Python/static/css/oradio3.css
+++ b/Python/static/css/oradio3.css
@@ -7,18 +7,57 @@
  */
 
 :root {
-	/* Official Oradio colors */
-	--oradio-text: #EAE7DC;			/* Alabaster */
-	--oradio-header: #D8C3A5;		/* Khaki Web */
-	--oradio-border: #8E8D8A;		/* Middle Grey */
-	--oradio-select: #3FB858;		/* Bright Green */
-	--oradio-background: #14213D;	/* Oxford Blue */
 
-	/* Supporting colors */
-	--oradio-list: #363737;			/* Dark Grey */
-	--oradio-success: #3FB858;		/* Bright Green */
-	--oradio-warning: #FFFE00;		/* Yellow */
-	--oradio-error: #FF0000;		/* Red */
+	/* Official Oradio colors */
+	--Alabaster: #EAE7DC;
+	--KhakiWeb: #D8C3A5;
+	--MiddleGrey: #8E8D8A;
+	--DarkGrey: #363737;
+	--OxfordBlue: #14213D;
+	--Green: #3FB858;
+	--Yellow: #ffff00;
+	--Red: #FF0000;
+
+	/* Color mapping */
+	--template-font: var(--Alabaster);
+	--template-background: var(--OxfordBlue);
+
+	--menu-font:  var(--Alabaster);
+	--menu-background:  var(--DarkGrey);
+	--menu-border:  var(--MiddleGrey);
+	--menu-hover:  var(--MiddleGrey);
+
+	--header-font: var(--OxfordBlue);
+	--header-background: var(--KhakiWeb);
+
+	--input-font:  var(--Alabaster);
+	--input-background:  var(--OxfordBlue);
+	--input-border:  var(--MiddleGrey);
+
+	--scrollbox-font:  var(--Alabaster);
+	--scrollbox-background:  var(--DarkGrey);
+	--scrollbox-select:  var(--Green);
+	--scrollbox-border:  var(--MiddleGrey);
+
+	--scrollbar-font:  var(--Green);
+	--scrollbar-background:  var(--MiddleGrey);
+	--scrollbar-border:  var(--MiddleGrey);
+
+	--button-font:  var(--Alabaster);
+	--button-background:  var(--Green);
+
+	--notification:  var(--Alabaster);
+	--notification-success:  var(--Green);
+	--notification-warning:  var(--Yellow);
+	--notification-error:  var(--Red);
+}
+
+html {
+  -webkit-touch-callout: none;
+  -webkit-user-select: text;
+  -webkit-text-size-adjust: none;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-datetime-detector: none;		/* Does not aways work, but safe to keep */
 }
 
 body {
@@ -26,8 +65,8 @@ body {
 	font-size: 16px;	/* Keep at least 16px to prevent zooming in iOS Safari */
 	margin: 0;
 	padding: 0;
-	background-color: var(--oradio-background);
-	color: var(--oradio-text);
+	background-color: var(--template-background);
+	color: var(--template-font);
 	display: flex;
 	justify-content: center;
 	min-height: 100vh;
@@ -51,8 +90,8 @@ body {
 h1 {
 	width: 100%;
 	height: 20px;
-	color: var(--oradio-background);
-	background-color: var(--oradio-header);
+	color: var(--header-font);
+	background-color: var(--header-background);
 	border: none;
 	border-radius: 5px;
 	padding: 10px;
@@ -87,13 +126,13 @@ label {
 
 /* Dropdown options list */
 .options {
-	border: 1px solid var(--oradio-border);
+	border: 1px solid var(--scrollbox-border);
 	display: none;
 	position: absolute;
 	top: 100%;
 	left: 0;
 	right: 0;
-	background-color: var(--oradio-list);
+	background-color: var(--scrollbox-background);
 	z-index: 10;
 	max-height: 200px;
 	overflow-y: auto;
@@ -103,7 +142,7 @@ label {
 	cursor: pointer;
 }
 .options div:hover {
-	background-color: var(--oradio-select);
+	background-color: var(--scrollbox-select);
 }
 
 input {
@@ -112,11 +151,11 @@ input {
 	padding: 10px;
 	margin-bottom: 20px;
 	border-radius: 5px;
-	border: 1px solid var(--oradio-border);
+	border: 1px solid var(--input-border);
 	box-sizing: border-box;
 	font-size: 16px;
-	background-color: var(--oradio-background);
-	color: var(--oradio-text);
+	background-color: var(--input-background);
+	color: var(--input-font);
 }
 
 button {
@@ -124,8 +163,8 @@ button {
 	width: 90%;
 	margin: 20px auto;
 	height: 40px;
-	background-color: var(--oradio-select);
-	color: var(--oradio-text);
+	background-color: var(--button-background);
+	color: var(--button-font);
 	border: none;
 	border-radius: 5px;
 	padding: 10px;
@@ -155,29 +194,30 @@ li {
 	text-align: center;
 	line-height: 1.5;
 	margin: 10px 0 10px 0;
+	color: var(--notification);
 	display: none;
 }
 
 .success {
-	color: var(--oradio-success);
+	color: var(--notification-success);
 }
 
 .warning {
-	color: var(--oradio-warning);
+	color: var(--notification-warning);
 }
 
 .error {
-	color: var(--oradio-error);
+	color: var(--notification-error);
 }
 
 .file-list {
 	display: none;
-	border: 1px solid var(--oradio-border);
+	border: 1px solid var(--scrollbox-border);
 	padding: 0 5px 0 5px;
 	line-height: 1.5;
 	margin: 20px 0 20px 0;
 	border-radius: 5px;
-	background-color: var(--oradio-list);
+	background-color: var(--scrollbox-background);
 	max-height: 230px;
 	overflow-y: auto;
 	z-index: 10;
@@ -188,14 +228,14 @@ li {
   width: 8px;
 }
 .file-list::-webkit-scrollbar-track {
-  background: var(--oradio-border);
+  background: var(--scrollbar-border);
 }
 .file-list::-webkit-scrollbar-thumb {
-  background: var(--oradio-select);
+  background: var(--scrollbar-font);
   border-radius: 4px;
 }
 .file-list::-webkit-scrollbar-thumb:hover {
-  background: var(--oradio-select);
+  background: var(--scrollbar-font);
 }
 
 @media (max-width: 500px) {
