--- a/Python/templates/menu.html
+++ b/Python/templates/menu.html
@@ -26,8 +26,7 @@ nav a {
 	flex: 1;
 	text-align: center;
 	text-decoration: none;
-	color: var(--menu-font);
-	font-weight: normal;
+	color: var(--menu-font); font-weight: normal;
 	padding: 5px 0 5px 0;
 	margin: 0;
 }
