--- a/Python/templates/status.html
+++ b/Python/templates/status.html
@@ -34,7 +34,7 @@
 					<td class="col2">{{ sw_version }}</td>
 				</tr>
 				<tr>
-					<td class="col1">Software serienummer</td>
+					<td class="col1">Software datum</td>
 					<td class="col2">{{ sw_serial }}</td>
 				</tr>
 			</table>
