Stop OradioAP when last client closes
Fix issue #384:
- Use websocket to track connection
- Allow multiple connections, only stop if last one closes

--- a/Python/templates/network.html
+++ b/Python/templates/network.html
@@ -14,6 +14,7 @@
 		<link rel="stylesheet" href="../static/css/oradio3.css" />
 		<link rel="stylesheet" href="../static/css/network.css" />
 
+		<script src="../static/js/oradio3.js"></script>
 		<script src="../static/js/network.js"></script>
 
 		<title>Oradio wifi instellen</title>
