--- a/Python/templates/playlists.html
+++ b/Python/templates/playlists.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="../static/css/oradio3.css" />
 		<link rel="stylesheet" href="../static/css/playlists.css" />
 
+		<script src="../static/js/oradio3.js"></script>
 		<script src="../static/js/playlists.js"></script>
 
 		<title>Oradio speellijsten</title>
