--- a/Python/templates/status.html
+++ b/Python/templates/status.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="../static/css/oradio3.css" />
 		<link rel="stylesheet" href="../static/css/status.css" />
 
+		<script src="../static/js/oradio3.js"></script>
 		<script src="../static/js/status.js"></script>
 
 		<title>Oradio status</title>
