Add close button
Address issue #306

--- a/Python/templates/buttons.html
+++ b/Python/templates/buttons.html
@@ -27,8 +27,11 @@
 
 		<div class="container">
 
-			<!-- Show Oradio logo -->
-			<img src="../static/logo.png" class="logo" />
+			<!-- Show header -->
+			<div class="header">
+				<img src="../static/logo.png">
+				<img src="../static/stop.png" onclick="closeWebInterface()">
+			</div>
 
 			<!-- Manage presets title bar -->
 			<h1 id="presets">Speellijst aan knop koppelen</h1>
