--- a/Python/templates/status.html
+++ b/Python/templates/status.html
@@ -22,8 +22,11 @@
 
 		<div class="container">
 
-			<!-- Show Oradio logo -->
-			<img src="../static/logo.png" class="logo" />
+			<!-- Show header -->
+			<div class="header">
+				<img src="../static/logo.png">
+				<img src="../static/stop.png" onclick="closeWebInterface()">
+			</div>
 
 			<h1 >Oradio informatie</h1>
 
