--- a/Python/templates/network.html
+++ b/Python/templates/network.html
@@ -32,8 +32,11 @@
 
 		<div class="container">
 
-			<!-- Show Oradio logo -->
-			<img src="../static/logo.png" class="logo" />
+			<!-- Show header -->
+			<div class="header">
+				<img src="../static/logo.png">
+				<img src="../static/stop.png" onclick="closeWebInterface()">
+			</div>
 
 			<!-- Provide network credentials to connect to -->
 			<form onsubmit="submitCredentials(event)">
