Exclude directories as custom playlist names
Address issue #395

--- a/Python/templates/playlists.html
+++ b/Python/templates/playlists.html
@@ -17,6 +17,7 @@
 
 		<script>
 			// Convert template variable to javascript
+			const directories = {{ directories|tojson }};
 			var playlists = {{ playlists|tojson }};
 		</script>
 
