--- a/Python/templates/network.html
+++ b/Python/templates/network.html
@@ -2,6 +2,7 @@
 <html lang="nl">
 	<head>
 		<meta charset="UTF-8" />
+		<meta name="autofocus" content="false">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 		<!-- From OpenNDS splash page -->
