Improve class naming

--- a/webapp/templates/oradio3.html
+++ b/webapp/templates/oradio3.html
@@ -44,7 +44,7 @@ Design choices:
 		<!-- Header -->
 		<header role="banner" class="header">
 			<img src="../static/logo.png" alt="Oradio logo">
-			<img src="../static/stop.png" alt="Stop" class="stop-btn">
+			<img src="../static/stop.png" alt="Stop" class="shutdown-button">
 		</header>
 
 		<!-- Navigation -->
