--- a/webapp/templates/oradio3.html
+++ b/webapp/templates/oradio3.html
@@ -220,8 +220,8 @@ Design choices:
 							<!-- Will be filled by Javascript -->
 						</div>
 					</div>
-					<button class="icon-button save-button-large" title="Bewaren"></button>
-					<button class="icon-button delete-button-large" title="Verwijderen"></button>
+					<button id="addButton" class="icon-button save-button-large" title="Bewaren"></button>
+					<button id="delButton" class="icon-button delete-button-large" title="Verwijderen"></button>
 				</div>
 
 				<!-- Show notifcation, if any -->
