Fix label 'for=' id

--- a/webapp/templates/oradio3.html
+++ b/webapp/templates/oradio3.html
@@ -103,7 +103,7 @@ Design choices:
 
 				<!-- Password -->
 				<div id="password-block" class="password">
-					<label for="password">Wachtwoord:</label>
+					<label for="password-input">Wachtwoord:</label>
 					<input
 						type="password"
 						id="password-input"
