network.js merged in oradio3.js

--- a/webapp/templates/oradio3.html
+++ b/webapp/templates/oradio3.html
@@ -23,7 +23,9 @@ Design choices:
 
 		<!-- JS -->
 		<script src="../static/js/oradio3.js" defer></script>
+<!--
 		<script src="../static/js/network.js" defer></script>
+-->
 		<script src="../static/js/buttons.js" defer></script>
 		<script src="../static/js/playlists.js" defer></script>
 		<script src="../static/js/status.js" defer></script>
@@ -92,7 +94,7 @@ Design choices:
 						type="text"
 						id="ssid-input"
 						name="ssid-input"
-						placeholder="Selecteer uw WiFi-netwerk"
+						placeholder="Selecteer uw wifi-netwerk"
 					/>
 					<span class="custom-icon">&#x25BC;</span> <!-- ▼ icon -->
 					<!-- Show network options -->
@@ -125,8 +127,8 @@ Design choices:
 
 				<input
 					type="text"
-					id="spotify"
-					name="spotify"
+					id="spotify-input"
+					name="spotify-input"
 					value="{{ spotify }}"
 					placeholder="Voer Spotify naam van deze Oradio in"
 				/>
